--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "Hmsc"]
+	path = Hmsc
+	url = https://github.com/hmsc-r/hmsc
+	shallow = true
+	registered = true
